--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
+appdirs==1.4.4
 distlib==0.3.1
 Django==2.2.13
+django-cors-headers==3.7.0
 djangorestframework==3.9.4
+filelock==3.0.12
+Pillow==8.2.0
+pytz==2021.1
+six==1.16.0
+sqlparse==0.4.1
 virtualenv==20.4.2
