added tests for ProductDetail api

--- a/.gitignore
+++ b/.gitignore
@@ -157,6 +157,9 @@ Thumbs.db
 
 # profiling data
 .prof
-
+.idea
 
 # End of https://www.toptal.com/developers/gitignore/api/django
+
+htmlcov
+.coverage
