--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,33 @@
 appdirs==1.4.4
+attrs==21.2.0
+black==21.9b0
+click==8.0.3
+coverage==6.0.2
 distlib==0.3.1
 Django==2.2.13
 django-cors-headers==3.7.0
+django-filter==21.1
 djangorestframework==3.9.4
+Faker==9.5.2
 filelock==3.0.12
+iniconfig==1.1.1
+mypy-extensions==0.4.3
+packaging==21.0
+pathspec==0.9.0
 Pillow==8.2.0
+platformdirs==2.4.0
+pluggy==1.0.0
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.5
+pytest-django==4.4.0
+python-dateutil==2.8.2
 pytz==2021.1
+regex==2021.10.21
 six==1.16.0
 sqlparse==0.4.2
+text-unidecode==1.3
+toml==0.10.2
+tomli==1.2.1
+typing-extensions==3.10.0.2
 virtualenv==20.4.2
